# recommendation-engine

./: .coverage  .env.docker  .env.local  .gitignore  Dockerfile  README.md  coverage.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python_ci.yaml
crawler/: .env.docker  main.py
crawler/static/: cities_dump.json
dashboard_service/: main.py  pyproject.toml
data_workflow_service/: main.py  pyproject.toml
data_workflow_service/src/recommendation_engine/app/features/: __init__.py
data_workflow_service/src/recommendation_engine/app/features/comments/domain/entity/: yemek_sepeti.py
data_workflow_service/src/recommendation_engine/app/features/comments/domain/values/: __init__.py
data_workflow_service/src/recommendation_engine/app/features/comments/mappers/: comment.py
data_workflow_service/src/recommendation_engine/app/features/comments/services/: comments.py
data_workflow_service/src/recommendation_engine/app/features/kernel/services/: aggregate_domains.py  recommendation_aggregate_domains.py
data_workflow_service/src/recommendation_engine/app/features/menu/domain/entity/: getir.py
data_workflow_service/src/recommendation_engine/app/features/menu/domain/values/getir/: menu.py
data_workflow_service/src/recommendation_engine/app/features/menu/dto/: menu.py
data_workflow_service/src/recommendation_engine/app/features/menu/mappers/: menu.py
data_workflow_service/src/recommendation_engine/app/features/menu/services/: __init__.py  menu.py
data_workflow_service/src/recommendation_engine/app/features/restaurants/domain/values/: delivery_time.py
data_workflow_service/src/recommendation_engine/app/features/restaurants/mappers/: restaurants.py
data_workflow_service/src/recommendation_engine/app/features/restaurants/services/: __init__.py  restaurant.py
data_workflow_service/src/recommendation_engine/app/features/shared_kernel/services/: aggregate_domains.py
data_workflow_service/src/recommendation_engine/app/shared_kernel/: extractor.py  processor.py
data_workflow_service/src/recommendation_engine/app/shared_kernel/api/: __init__.py
data_workflow_service/src/recommendation_engine/app/shared_kernel/api/router/: __init__.py  aggregate_domain.py  recommendation_aggregate_domain.py
data_workflow_service/src/recommendation_engine/app/shared_kernel/database/: clickhouse.py
data_workflow_service/src/recommendation_engine/app/tasks/: restaurant.py
data_workflow_service/tests/app/domain/comments/: test_comments_mapper.py  test_getir_comments.py
data_workflow_service/tests/app/domain/menu/: test_yemeksepeti_menu.py
migrations/versions/: 58fd94ccc2c2_restaurants_table.py  de011ed478ca_menu_table.py  de3b0f448b4c_comments_table.py
recommendation-dasboard-react/: package-lock.json  package.json
recommendation-dasboard-react/src/: App.css  App.js
recommendation-dasboard-react/src/components/: RestaurantMap.js
recommendation_service/: main.py  pyproject.toml
recommendation_service/jupyter/: recom-finetune.ipynb
recommendation_service/jupyter/.ipynb_checkpoints/: recom-finetune-checkpoint.ipynb
recommendation_service/src/recommendation/api/: __init__.py
recommendation_service/src/recommendation/api/routers/: __init__.py  recommendation.py
recommendation_service/src/recommendation/services/: model.py  recommendation.py
search_service/: main.py  migration.py  pyproject.toml  restaurant.csv  service.py  solr.py
search_service/src/search/api/: __init__.py
search_service/src/search/api/router/: search.py
search_service/src/search/schemas/: search.py
search_service/src/search/services/: search.py  upload.py
search_service/src/search/solr/: base.py  collection.py  query.py  schema.py  upload.py
search_service/src/search/tasks/: __init__.py  celery_app.py  data_fetch.py
search_service/src/search/utils/: constants.py  request_mixin.py
src/recommendation_engine/app/: __init__.py  environment.py
src/recommendation_engine/app/domain/: base_entity.py  base_processor.py  processor.py  request.py  value_stack.py
src/recommendation_engine/app/features/: processor.py  value_stack.py
static/: cities.json
(+120 files in other folders)
