[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <99879453+fmelihh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
pendulum = "^3.0.0"
requests = "^2.31.0"
lxml = "^5.2.1"
tqdm = "^4.66.2"
loguru = "^0.7.2"
pydantic = "^2.6.4"
tenacity = "^8.2.3"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
confluent-kafka = "^2.3.0"
celery = "^5.4.0"
coverage = "^7.5.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
