[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <99879453+fmelihh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
pendulum = "^3.0.0"
requests = "^2.31.0"
lxml = "^5.2.1"
tqdm = "^4.66.2"
loguru = "^0.7.2"
pydantic = "^2.6.4"
tenacity = "^8.2.3"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
confluent-kafka = "^2.3.0"
celery = "^5.4.0"
coverage = "^7.5.0"
pytest = "^8.2.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
addict = "^2.4.0"
black = "^24.10.0"
clickhouse-sqlalchemy = "^0.3.2"
sqlalchemy = "^2.0.35"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
