[tool.poetry]
name = "recommendation-service"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
jupyter = "^1.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
sentence-transformers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
