[tool.poetry]
name = "search-service"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.115.6", extras = ["all"]}
pysolr = "^3.10.0"
uvicorn = "^0.32.1"
pandas = "^2.2.3"
tenacity = "^9.0.0"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
